--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,11 +1,12 @@
 aniso8601==1.3.0
-api==0.0.0
+-e git+git@github.com:mfay/FlaskApiTest.git@cac6948ccfc28a07b225f87def1e7797c3c65d30#egg=api&subdirectory=app
 click==6.7
 Flask==0.12.2
 flask-marshmallow==0.8.0
 flask-restplus==0.10.1
 Flask-SQLAlchemy==2.3.2
 functools32==3.2.3.post2
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 jsonschema==2.6.0
